--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Custom Fonts",
+  "name": "Devtools Fonts",
   "version": "1.0.0",
   "description": "Extension use for custom fonts.",
   "devtools_page": "index.html",
